Style update - stopped infoboxes overflowing if text is too long

--- a/static/viewer/styles/imouto.css
+++ b/static/viewer/styles/imouto.css
@@ -118,3 +118,6 @@
 .info-box-content a { color: #000000; text-decoration: underline; }
 
 .scatter-chart { max-height: 160px; }
+
+.info-box-content { overflow-x: hidden; }
+.info-box-number { white-space: nowrap; }
